0033250: Configuration - Missing Limits header file

Added new include limits to fix build problem